# SPLC

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  basic_test.sh  gen_out.sh  lex.l  lex_print.l  std_test.sh  syntax.tab.c  syntax.tab.h  syntax.y  test copy.c  test.sh  test1.spl  treenode.c  treenode.h
extra-test/phase1/: tmp_test_1_s01.out  tmp_test_1_s03.out  tmp_test_1_s04.out  tmp_test_1_s06.out  tmp_test_1_s07.out  tmp_test_1_s08.out  tmp_test_1_s09.out  tmp_test_1_s10.out  tmp_test_1_s11.out  tmp_test_1_s12.out  tmp_test_1_s13.out
include/: ast.h  dir_search.h  lut.h  semantics.h  splc_link.h  splcdef.h  splcopt.h  spldef.h  spldefs.h  splopt.h  utils.h
include/parser/: ast.h  lut.h  spldef.h  utils.h
include/splc/: utils.h
modules/libspl/: CMakeLists.txt
modules/libspl/include/: stdargs.h
modules/splc/: CMakeLists.txt
modules/splc/include/: ast.h  ast.hh  ast_token.hh  context.hh  dir_search.h  driver.hh  expr.h  ir.h  lut.h  msg_type.h  preprocessor.h  scanner.hh  semantics.h  splc_error_type.h  splc_msg_type.h  splcdef.h  splcflag.h  splcopt.h  splcpass.h  trans_unit.hh  type.h  utils.h
modules/splc/include/AST/: AST.hh  ASTBase.hh  ASTCommons.hh  ASTContext.hh  ASTContextManager.hh  ASTNode.hh  ASTProcess.hh  ASTSymbol.hh  ASTToken.hh  DerivedAST.hh  DerivedTypes.hh  Expr.hh  SPLType.hh  SPLTypeContext.hh  SymbolEntry.hh  SymbolTable.hh  TranslationManager.hh  TranslationUnit.hh  TranslationUnitProcess.hh  Type.hh  TypeCheck.hh  TypeContext.hh  Value.hh
modules/splc/include/Analysis/: UnusedVariable.hh
modules/splc/include/Basic/: DerivedTypes.hh  SPLCContext.hh  Specifiers.hh  Type.hh  TypeContext.hh  Typetraits.hh
modules/splc/include/CodeGen/: ASTDispatch.hh  Builder.hh  LLVMIRGen.hh  LLVMWrapper.hh  ObjBuilder.hh  OptimizationLevel.hh  SimInstGen.hh
modules/splc/include/Core/: Base.hh  Options.hh  System.hh  Utils.hh  splc.hh
modules/splc/include/Core/Utils/: CommandLineParser.hh  ControlSequence.hh  Location.hh  LocationWrapper.hh  Logging.hh  LoggingLevel.hh  TraceType.hh
modules/splc/include/IO/: Context.hh  Driver.hh  IOBase.hh  Preprocessor.hh  Scanner.hh
modules/splc/include/IR/: IR.hh  IRBase.hh  IRBuilder.hh  IROptimizationLevel.hh  IROptimizer.hh  IRSimInstGen.hh
modules/splc/include/IR/TAC/: TAC.hh  TACBase.hh
modules/splc/include/SIR/: Argument.hh  BasicBlock.hh  Constant.hh  Function.hh  GlobalValue.hh  GlobalVariable.hh  IR.hh  IRBase.hh  IRBuilder.hh  IROptimizer.hh  Instruction.def  Instruction.hh  Module.hh  SIRCommons.hh  SymbolTableListTraits.hh  Use.hh  User.hh  Value.hh  ValueSymbolTable.hh
modules/splc/include/Translation/: TranslationBase.hh  TranslationContext.hh  TranslationContextManager.hh  TranslationLogHelper.hh  TranslationLogger.hh  TranslationManager.hh  TranslationOption.hh  TranslationUnit.hh  TranslationUnitProcess.hh
modules/splc/include/core/: base.hh  splc.hh  system.hh  utils.hh
modules/splc/include/core/utils/: cmd_parser.hh  cont_seq.hh  level.hh  location_wrapper.hh  logging.hh  logging_level.hh  trace_type.hh
modules/splc/include/ir/: mips32gen.hh
modules/splc/src/: .gitignore  ast.c  ast.cc  context.cc  driver.cc  expr.c  lex.l  lexer.ll  lut.c  main.c  msg_type.c  parser.yy  preprocessor.c  semantics.c  splc.cc  splc.cpp  splc_msg_type.c  splcdef.c  splcopt.c  splcpass.c  syntax.y  trans_unit.cc  type.c  utils.c
modules/splc/src/AST/: AST.cc  ASTBase.cc  ASTBasePolymorphism.cc  ASTBaseProcess.cc  ASTBaseType.cc  ASTBaseValue.cc  ASTContext.cc  ASTContextManager.cc  ASTNode.cc  ASTProcess.cc  ASTSymbol.cc  CMakeLists.txt  DerivedAST.cc  Expr.cc  SymbolEntry.cc  TranslationManager.cc  TranslationUnit.cc  Type.cc  TypeCheck.cc  Value.cc
modules/splc/src/Analysis/: CMakeLists.txt  UnusedVariable.cc
modules/splc/src/Basic/: CMakeLists.txt  Type.cc  TypeTraits.cc
modules/splc/src/CodeGen/: ASTDispatch.cc  CMakeLists.txt  LLVMIRGen.cc  ObjBuilder.cc  SimInstGen.cc
modules/splc/src/Core/: CMakeLists.txt  Internal.cc  Options.cc  System.cc  Utils.cc
modules/splc/src/Core/Utils/: CommandLineParser.cc  Logging.cc
modules/splc/src/IO/: CMakeLists.txt  Context.cc  Driver.cc  Lexer.ll  Parser.yy  Scanner.cc
modules/splc/src/IR/: CMakeLists.txt  IR.cc  IRBuilder.cc  IROptimizer.cc  IRSImInstGen.cc
modules/splc/src/IR/TAC/: TACBase.cc
modules/splc/src/SIR/: CMakeLists.txt  IR.cc  IRBuilder.cc  IROptimizer.cc  Value.cc
modules/splc/src/Translation/: CMakeLists.txt  TranslationContext.cc  TranslationContextManager.cc  TranslationLogger.cc  TranslationManager.cc  TranslationUnit.cc
modules/splc/src/core/: internal.cc  options.cc  system.cc  utils.cc
modules/splc/src/core/utils/: logging.cc
modules/spllibc/: CMakeLists.txt
modules/ts/: CMakeLists.txt
references/: syntax copy.y
reports/: 12110804-phase1.md  12110804-phase2.md  12110804-phase3.md  12110804-phase4.md
src/: ast.c  dir_search.c  lex.l  lut.c  main.c  semantics.c  splcdef.c  splcopt.c  spldef.c  spldefs.c  splopt.c  syntax.y  utils.c
src/parser/: ast.c  lex.l  main.c  spldef.c  syntax.y  utils.c
src/splc/: splc.c  utils.c
test/: .gitignore  test_5.spl
test-ex/: extra_test_1.spl  extra_test_3.spl  extra_test_4.spl
test-ex/phase1/: test_0.out  test_1.out  test_10.spl  test_11.spl  test_12.spl  test_2.out  test_2.spl  test_3.out  test_4.out  test_4.spl  test_5.out  test_5.spl  test_6.out  test_6.spl  test_7.out  test_7.spl  test_8.out  test_9.spl
test-func/: common.h  header.h
test-scripts/: batch_test.sh  gen_out.sh
test/llvm-test/: .gitignore  main.c  readme.md  test_01.c  test_01.c.ll  test_01.out  test_02.c  test_02.c.ll  test_03.c  test_03.c.ll  test_04.c  test_04.c.ll  test_05.c  test_05.c.ll  test_06.c  test_06.c.ll  test_06.out
test/phase1/: test_12110804_1.out  test_12110804_1.spl  test_12110804_2.out  test_12110804_2.spl  test_12110804_3.out  test_12110804_3.spl  test_12110804_4.out  test_12110804_4.spl  test_12110804_5.out
test/std-test/: .gitignore
test/test-func/: phase1.c  source.c
test/tool/: .gitignore  readme.md
tests/: .gitignore
(+56 files in other folders)
